// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render after answer 1`] = `
<div>
  <h3
    className="title"
  >
    Question title
  </h3>
  <Choice
    choice={
      Object {
        "isWrong": true,
        "text": "riven",
        "val": "a",
      }
    }
    isSelected={true}
    ith={1}
    onClick={[Function]}
  />
  <Choice
    choice={
      Object {
        "isWrong": true,
        "text": "zed",
        "val": "b",
      }
    }
    isSelected={false}
    ith={2}
    onClick={[Function]}
  />
  <Choice
    choice={
      Object {
        "isCorrect": true,
        "text": "kogmaw",
        "val": "c",
      }
    }
    isSelected={false}
    ith={3}
    onClick={[Function]}
  />
  <Choice
    choice={
      Object {
        "isWrong": true,
        "text": "janna",
        "val": "d",
      }
    }
    isSelected={false}
    ith={4}
    onClick={[Function]}
  />
  <AnswerMessage
    answer={
      Object {
        "val": "a",
      }
    }
  />
</div>
`;

exports[`render before answer 1`] = `
<div>
  <h3
    className="title"
  >
    Question title
  </h3>
  <Choice
    choice={
      Object {
        "isWrong": true,
        "text": "riven",
        "val": "a",
      }
    }
    isSelected={false}
    ith={1}
    onClick={[Function]}
  />
  <Choice
    choice={
      Object {
        "isWrong": true,
        "text": "zed",
        "val": "b",
      }
    }
    isSelected={false}
    ith={2}
    onClick={[Function]}
  />
  <Choice
    choice={
      Object {
        "isCorrect": true,
        "text": "kogmaw",
        "val": "c",
      }
    }
    isSelected={false}
    ith={3}
    onClick={[Function]}
  />
  <Choice
    choice={
      Object {
        "isWrong": true,
        "text": "janna",
        "val": "d",
      }
    }
    isSelected={false}
    ith={4}
    onClick={[Function]}
  />
  <AnswerMessage
    answer={Object {}}
  />
</div>
`;
